@@ -17,9 +17,6 @@
     <!-- jquery must be loaded here -->
     <script src="contrib/jquery-1.8.3.js"></script>
 
-    <!--TODO - pull into module system-->
-    <script src="contrib/fastclick-0.5.6.js"></script>
-
     <!-- sim -->
     <script data-main='js/config.js' src='contrib/require-2.1.2.js'></script>
 
